# rust-reservation

./: Cargo.toml  cliff.toml
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: lib.rs
abi/src/pb/: reservation.rs
migrations/: 20241113131827_init.up.sql  20241113135639_reservation.up.sql  20241113135928_reservation_trigger.up.sql  20241113140205_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md  template.md
service/: Cargo.toml
