[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.13.3"
prost-types = "0.13.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
